Fix wave spacing glitch

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -339,11 +339,12 @@ html {
   display: block;
   width: 100%;
   height: 80px;
+  margin-bottom: -1px;
 }
 
 @media (min-width: 64rem) {
   .site-footer__wave {
-    margin-top: -120px;
+    margin-top: -140px;
   }
 
   .site-footer__wave svg {
